--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
     <main>
         <section>
             <div><strong>Summary</strong></div>
-            <p>I am a fifth-year Ph.D. student at the Natural Language Processing and Representation Learning (NRL) Lab
-                at VISTEC, Thailand, under the supervision of Assoc. Prof. Dr. Sarana Nutanong and co-supervision of
-                Assoc. Prof. Dr. Attapol Rutherford.
+            <p>I am a Ph.D. student at the Natural Language Processing and Representation Learning (NRL) Lab at VISTEC,
+                Thailand. Under the supervision of Assoc. Prof. Dr. Sarana Nutanong and co-supervision of Assoc. Prof.
+                Dr. Attapol Rutherford, I am working on my thesis titled "A Study on Resource Constraints and Bi-lingual
+                Transfer in Named Entity Recognition."
             </p>
             <p>My research focuses on information extraction tasks, Named Entity Recognition (NER), and Representation
                 Learning. My work aims to address the challenges in NER, including limited resources for Thai NER,
@@ -61,14 +62,15 @@
                 knowledge transfer from high-resource to low-resource languages.
             </p>
         </section>
-        
+
         <section>
             <div><strong>Education</strong></div>
             <div>
-                <p><strong>• Ph.D. in Information Science and Technology (5-year program):</strong> GPA: 4.00/4.00 <br> 
-                    Relevant coursework: Natural Language Processing, Computational Machine Intelligence and Applications.</p>
-                    
-                <p><strong>• B.Eng. in Computer Engineering:</strong> GPA: 3.62/4.00 (Top 1) <br> 
+                <p><strong>• Ph.D. in Information Science and Technology (5-year program):</strong> GPA: 4.00/4.00 <br>
+                    Relevant coursework: Natural Language Processing, Computational Machine Intelligence and
+                    Applications.</p>
+
+                <p><strong>• B.Eng. in Computer Engineering:</strong> GPA: 3.62/4.00 (Top 1) <br>
                     Relevant coursework: Data Structures and Algorithms, Operating Systems, Software Engineering.</p>
             </div>
         </section>
