--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 - W-NUT 2025 (collocated with NAACL2025) and MultiLexNorm2<br>
             <p>
             <p><strong>• Reviewers:</strong><br>
-                - ARR-EMNLP 2024
+                - ARR-EMNLP 2024, 2025
             </p>
         </section>
     </main>
