Update personal and research information in index.html
Revised personal summary and research focus in index.html.

--- a/index.html
+++ b/index.html
@@ -44,22 +44,15 @@
     <main>
         <section>
             <div><strong>Summary</strong></div>
-            <p>I am a Ph.D. student at the Natural Language Processing and Representation Learning (NRL) Lab at VISTEC,
-                Thailand. Under the supervision of Assoc. Prof. Dr. Sarana Nutanong and co-supervision of Assoc. Prof.
-                Dr. Attapol Rutherford, I am working on my thesis titled "A Study on Resource Constraints and Bi-lingual
-                Transfer in Named Entity Recognition."
+            <p>
+                I'm a five-year Ph.D. scholarship student in the Natural Language Processing and Representation Learning Lab (NRL) at VISTEC, Thailand, supervised by Associate Professor Prof. Dr. Sarana.
             </p>
-            <p>My research focuses on information extraction tasks, Named Entity Recognition (NER), and Representation
-                Learning. My work aims to address the challenges in NER, including limited resources for Thai NER,
-                issues related to open class problems with unseen or long-tail entities, multilingual and
-                domain-specific. My co-authors and I have previously worked on developing a Thai Fine-grained Nested NER
-                dataset to bridge the gap between low-resource and high-resource languages. Additionally, we have
-                explored few-shot learning techniques, leveraging large language models to generate relevant examples
-                and enhance the effectiveness of few-shot NER.
+            <p>
+                PhD Thesis: Resource-Constrained Named Entity Recognition — Contributed a Thai-language dataset for fine-grained nested NER and a bilingual financial NER dataset for the stock market; analyzed the generalization of encoder-based and LLM-based NER models to unseen entity types and new domains; and addressed multilingual text normalization challenges in informal language.
             </p>
 
-            <p>Currently, I am focusing on creating a bilingual finance-NER dataset in Thai and English to study
-                knowledge transfer from high-resource to low-resource languages.
+            <p>
+                Currently, I am focused on developing and evaluating an LLM-based retrieval-augmented generation (RAG) system for the medical domain, using supervised fine-tuning (SFT) and reinforcement learning methods (e.g., DPO, GRPO) to train models for multi-turn medical question answering.
             </p>
         </section>
 
