--- a/cv.html
+++ b/cv.html
@@ -39,6 +39,8 @@
     <!-- Main Content Section -->
     <main>
         <section>
+            You can download my CV <a href="https://github.com/WeerayutBu/weerayutbu.github.io/blob/main/files/cv.weerayut.b.pdf">here</a>.
+
             <div><strong>Experience</strong></div>
                     
                 </p>
