--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section>
             <div><strong>Summary</strong></div>
             <p>
-                I'm a five-year Ph.D. scholarship student in the Natural Language Processing and Representation Learning Lab (NRL) at VISTEC, Thailand, supervised by Associate Professor Prof. Dr. Sarana.
+                I’m a Ph.D. student in the Natural Language Processing and Representation Learning Lab (NRL) at VISTEC, Thailand, supervised by Associate Professor Prof. Dr. Sarana Nutanong and co-advised by Associate Professor. Prof. Dr. Attapol Rutherford.
             </p>
             <p>
                 PhD Thesis: Resource-Constrained Named Entity Recognition — Contributed a Thai-language dataset for fine-grained nested NER and a bilingual financial NER dataset for the stock market; analyzed the generalization of encoder-based and LLM-based NER models to unseen entity types and new domains; and addressed multilingual text normalization challenges in informal language.
@@ -59,7 +59,7 @@
         <section>
             <div><strong>Education</strong></div>
             <div>
-                <p><strong>• Ph.D. in Information Science and Technology (5-year program):</strong> GPA: 4.00/4.00 <br>
+                <p><strong>• Ph.D. in Information Science and Technology (5-year program, fully funded):</strong> GPA: 4.00/4.00 <br>
                     Relevant coursework: Natural Language Processing, Computational Machine Intelligence and
                     Applications.</p>
 
