--- a/cv.html
+++ b/cv.html
@@ -39,7 +39,7 @@
     <!-- Main Content Section -->
     <main>
         <section>
-            You can download my CV <a href="https://github.com/WeerayutBu/weerayutbu.github.io/blob/main/files/cv.weerayut.b.pdf">here</a>.
+            You can download my CV <a href="https://github.com/WeerayutBu/weerayutbu.github.io/blob/main/files/cv_weerayut_b.pdf">here</a>.
             <br>
             <div><strong>Experience</strong></div>
                     
